Add BaseItem class