@@ -1,15 +1,14 @@
 package com.sihenzhang.crockpot.item.food;
 
-import com.google.common.collect.ImmutableList;
 import com.sihenzhang.crockpot.CrockPot;
 import com.sihenzhang.crockpot.CrockPotConfigs;
 import com.sihenzhang.crockpot.capability.FoodCounterCapabilityHandler;
+import com.sihenzhang.crockpot.util.I18nUtils;
 import com.sihenzhang.crockpot.util.MathUtils;
 import com.sihenzhang.crockpot.util.StringUtils;
 import net.minecraft.ChatFormatting;
 import net.minecraft.client.Minecraft;
 import net.minecraft.network.chat.Component;
-import net.minecraft.network.chat.MutableComponent;
 import net.minecraft.network.chat.TextComponent;
 import net.minecraft.network.chat.TranslatableComponent;
 import net.minecraft.sounds.SoundEvent;
@@ -30,7 +29,7 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.function.Supplier;
 
-public class CrockPotFood extends Item {
+public class CrockPotFoodItem extends Item {
     private final int duration;
     private final boolean isDrink;
     private final SoundEvent eatingSound;
@@ -42,7 +41,7 @@ public class CrockPotFood extends Item {
     private final boolean hideEffects;
     private final List<Supplier<Component>> effectTooltips;
 
-    protected CrockPotFood(CrockPotFoodBuilder builder) {
+    protected CrockPotFoodItem(CrockPotFoodItemBuilder builder) {
         super(builder.properties.food(builder.foodBuilder.build()));
         this.duration = builder.duration;
         this.isDrink = builder.isDrink;
@@ -56,18 +55,18 @@ public class CrockPotFood extends Item {
         this.effectTooltips = builder.effectTooltips;
     }
 
-    public static CrockPotFoodBuilder builder() {
-        return new CrockPotFoodBuilder();
+    public static CrockPotFoodItemBuilder builder() {
+        return new CrockPotFoodItemBuilder();
     }
 
-    public static CrockPotFoodBuilder builder(int nutrition, float saturationModifier) {
-        return new CrockPotFoodBuilder(nutrition, saturationModifier);
+    public static CrockPotFoodItemBuilder builder(int nutrition, float saturationModifier) {
+        return new CrockPotFoodItemBuilder(nutrition, saturationModifier);
     }
 
     @SuppressWarnings("deprecation")
     public List<Pair<MobEffectInstance, Float>> getEffects() {
-        FoodProperties foodProperties = this.getFoodProperties();
-        return foodProperties == null ? ImmutableList.of() : foodProperties.getEffects().stream().map(p -> Pair.of(p.getFirst(), p.getSecond())).collect(ImmutableList.toImmutableList());
+        var foodProperties = this.getFoodProperties();
+        return foodProperties == null ? List.of() : foodProperties.getEffects().stream().map(p -> Pair.of(p.getFirst(), p.getSecond())).toList();
     }
 
     @Override
@@ -89,12 +88,12 @@ public class CrockPotFood extends Item {
 
     @Override
     public int getUseDuration(ItemStack stack) {
-        return this.duration;
+        return duration;
     }
 
     @Override
     public UseAnim getUseAnimation(ItemStack stack) {
-        if (this.isDrink) {
+        if (isDrink) {
             return UseAnim.DRINK;
         } else {
             return super.getUseAnimation(stack);
@@ -103,10 +102,10 @@ public class CrockPotFood extends Item {
 
     @Override
     public SoundEvent getEatingSound() {
-        if (this.eatingSound != null) {
+        if (eatingSound != null) {
             return eatingSound;
         }
-        if (this.isDrink) {
+        if (isDrink) {
             return SoundEvents.GENERIC_DRINK;
         }
         return super.getEatingSound();
@@ -114,8 +113,8 @@ public class CrockPotFood extends Item {
 
     @Override
     public void appendHoverText(ItemStack stack, @Nullable Level level, List<Component> tooltipComponents, TooltipFlag isAdvanced) {
-        if (!this.tooltips.isEmpty()) {
-            this.tooltips.forEach(tip -> tooltipComponents.add(tip.get()));
+        if (!tooltips.isEmpty()) {
+            tooltips.forEach(tip -> tooltipComponents.add(tip.get()));
         }
         if (level != null && Minecraft.getInstance().player != null) {
             Minecraft.getInstance().player.getCapability(FoodCounterCapabilityHandler.FOOD_COUNTER_CAPABILITY).ifPresent(foodCounter -> {
@@ -125,20 +124,21 @@ public class CrockPotFood extends Item {
                 if (!foodCounter.hasEaten(this)) {
                     tooltipComponents.add(new TranslatableComponent("tooltip.crockpot.effect.not_eat").withStyle(ChatFormatting.GRAY, ChatFormatting.ITALIC));
                 } else {
-                    if (this.getEffects().isEmpty() && effectTooltips.isEmpty() && removedEffects.isEmpty() && heal <= 0.0F && (damage == null || damage.getValue() <= 0.0F)) {
+                    var effects = this.getEffects();
+                    if (effects.isEmpty() && effectTooltips.isEmpty() && removedEffects.isEmpty() && heal <= 0.0F && (damage == null || damage.getValue() <= 0.0F)) {
                         tooltipComponents.add(new TranslatableComponent("tooltip.crockpot.effect.no_effect").withStyle(ChatFormatting.GRAY));
                         return;
                     }
-                    this.getEffects().forEach(p -> {
-                        MobEffectInstance effect = p.getKey();
-                        MutableComponent tooltip = new TranslatableComponent(effect.getDescriptionId());
+                    effects.forEach(p -> {
+                        var effect = p.getKey();
+                        var tooltip = new TranslatableComponent(effect.getDescriptionId());
                         if (effect.getAmplifier() > 0) {
                             tooltip = new TranslatableComponent("potion.withAmplifier", tooltip, new TranslatableComponent("potion.potency." + effect.getAmplifier()));
                         }
                         if (effect.getDuration() > 20) {
                             tooltip = new TranslatableComponent("potion.withDuration", tooltip, MobEffectUtil.formatDuration(effect, 1.0F));
                         }
-                        float probability = p.getValue();
+                        var probability = p.getValue();
                         if (probability < 1.0F) {
                             tooltip = new TranslatableComponent("tooltip.crockpot.effect.with_probability", StringUtils.format(probability, "0.##%"), tooltip);
                         }
@@ -151,11 +151,11 @@ public class CrockPotFood extends Item {
                     effectTooltips.forEach(tip -> tooltipComponents.add(tip.get()));
                     removedEffects.forEach(e -> tooltipComponents.add(new TranslatableComponent("tooltip.crockpot.effect.remove", new TranslatableComponent(e.getDescriptionId())).withStyle(ChatFormatting.GOLD)));
                     if (heal > 0.0F) {
-                        float hearts = heal / 2.0F;
+                        var hearts = heal / 2.0F;
                         tooltipComponents.add(new TranslatableComponent("tooltip.crockpot.effect.heal." + (MathUtils.fuzzyEquals(hearts, 1.0F) ? "single" : "multiple"), StringUtils.format(hearts, "0.#")).withStyle(ChatFormatting.BLUE));
                     }
                     if (damage != null && damage.getValue() > 0.0F) {
-                        float hearts = damage.getValue() / 2.0F;
+                        var hearts = damage.getValue() / 2.0F;
                         tooltipComponents.add(new TranslatableComponent("tooltip.crockpot.effect.damage." + (MathUtils.fuzzyEquals(hearts, 1.0F) ? "single" : "multiple"), StringUtils.format(hearts, "0.#")).withStyle(ChatFormatting.RED));
                     }
                 }
@@ -164,7 +164,7 @@ public class CrockPotFood extends Item {
         super.appendHoverText(stack, level, tooltipComponents, isAdvanced);
     }
 
-    public static class CrockPotFoodBuilder {
+    public static class CrockPotFoodItemBuilder {
         private Properties properties = new Properties().tab(CrockPot.ITEM_GROUP);
         private int maxStackSize = 64;
         private Rarity rarity = Rarity.COMMON;
@@ -180,140 +180,140 @@ public class CrockPotFood extends Item {
         private boolean hideEffects;
         private final List<Supplier<Component>> effectTooltips = new ArrayList<>();
 
-        public CrockPotFoodBuilder() {
+        public CrockPotFoodItemBuilder() {
         }
 
-        public CrockPotFoodBuilder(int nutrition, float saturationModifier) {
+        public CrockPotFoodItemBuilder(int nutrition, float saturationModifier) {
             this.foodBuilder = this.foodBuilder.nutrition(nutrition).saturationMod(saturationModifier);
         }
 
-        public CrockPotFoodBuilder nutrition(int nutrition) {
+        public CrockPotFoodItemBuilder nutrition(int nutrition) {
             this.foodBuilder = this.foodBuilder.nutrition(nutrition);
             return this;
         }
 
-        public CrockPotFoodBuilder saturationMod(float saturationModifier) {
+        public CrockPotFoodItemBuilder saturationMod(float saturationModifier) {
             this.foodBuilder = this.foodBuilder.saturationMod(saturationModifier);
             return this;
         }
 
-        public CrockPotFoodBuilder meat() {
+        public CrockPotFoodItemBuilder meat() {
             this.foodBuilder = this.foodBuilder.meat();
             return this;
         }
 
-        public CrockPotFoodBuilder alwaysEat() {
+        public CrockPotFoodItemBuilder alwaysEat() {
             this.foodBuilder = this.foodBuilder.alwaysEat();
             return this;
         }
 
-        public CrockPotFoodBuilder duration(FoodUseDuration duration) {
+        public CrockPotFoodItemBuilder duration(FoodUseDuration duration) {
             this.duration = duration.val;
             return this;
         }
 
-        public CrockPotFoodBuilder effect(Supplier<MobEffectInstance> effect, float probability) {
+        public CrockPotFoodItemBuilder effect(Supplier<MobEffectInstance> effect, float probability) {
             this.foodBuilder = this.foodBuilder.effect(effect, probability);
             return this;
         }
 
-        public CrockPotFoodBuilder effect(Supplier<MobEffectInstance> effect) {
+        public CrockPotFoodItemBuilder effect(Supplier<MobEffectInstance> effect) {
             this.foodBuilder = this.foodBuilder.effect(effect, 1.0F);
             return this;
         }
 
-        public CrockPotFoodBuilder effect(MobEffect effect, int duration, int amplifier, float probability) {
+        public CrockPotFoodItemBuilder effect(MobEffect effect, int duration, int amplifier, float probability) {
             return this.effect(() -> new MobEffectInstance(effect, duration, amplifier), probability);
         }
 
-        public CrockPotFoodBuilder effect(MobEffect effect, int duration, int amplifier) {
+        public CrockPotFoodItemBuilder effect(MobEffect effect, int duration, int amplifier) {
             return this.effect(effect, duration, amplifier, 1.0F);
         }
 
-        public CrockPotFoodBuilder effect(MobEffect effect, int duration, float probability) {
+        public CrockPotFoodItemBuilder effect(MobEffect effect, int duration, float probability) {
             return this.effect(() -> new MobEffectInstance(effect, duration), probability);
         }
 
-        public CrockPotFoodBuilder effect(MobEffect effect, int duration) {
+        public CrockPotFoodItemBuilder effect(MobEffect effect, int duration) {
             return this.effect(effect, duration, 1.0F);
         }
 
-        public CrockPotFoodBuilder effect(Supplier<? extends MobEffect> effect, int duration, int amplifier, float probability) {
+        public CrockPotFoodItemBuilder effect(Supplier<? extends MobEffect> effect, int duration, int amplifier, float probability) {
             return this.effect(() -> new MobEffectInstance(effect.get(), duration, amplifier), probability);
         }
 
-        public CrockPotFoodBuilder effect(Supplier<? extends MobEffect> effect, int duration, int amplifier) {
+        public CrockPotFoodItemBuilder effect(Supplier<? extends MobEffect> effect, int duration, int amplifier) {
             return this.effect(effect, duration, amplifier, 1.0F);
         }
 
-        public CrockPotFoodBuilder effect(Supplier<? extends MobEffect> effect, int duration, float probability) {
+        public CrockPotFoodItemBuilder effect(Supplier<? extends MobEffect> effect, int duration, float probability) {
             return this.effect(() -> new MobEffectInstance(effect.get(), duration), probability);
         }
 
-        public CrockPotFoodBuilder effect(Supplier<? extends MobEffect> effect, int duration) {
+        public CrockPotFoodItemBuilder effect(Supplier<? extends MobEffect> effect, int duration) {
             return this.effect(effect, duration, 1.0F);
         }
 
-        public CrockPotFoodBuilder drink() {
+        public CrockPotFoodItemBuilder drink() {
             this.isDrink = true;
             return this;
         }
 
-        public CrockPotFoodBuilder eatingSound(SoundEvent eatingSound) {
+        public CrockPotFoodItemBuilder eatingSound(SoundEvent eatingSound) {
             this.eatingSound = eatingSound;
             return this;
         }
 
-        public CrockPotFoodBuilder cooldown(int cooldown) {
+        public CrockPotFoodItemBuilder cooldown(int cooldown) {
             this.cooldown = cooldown;
             return this;
         }
 
-        public CrockPotFoodBuilder heal(float heal) {
+        public CrockPotFoodItemBuilder heal(float heal) {
             this.heal = heal;
             return this;
         }
 
-        public CrockPotFoodBuilder damage(DamageSource damageSource, float damageAmount) {
+        public CrockPotFoodItemBuilder damage(DamageSource damageSource, float damageAmount) {
             this.damage = Pair.of(damageSource, damageAmount);
             return this;
         }
 
-        public CrockPotFoodBuilder removeEffect(MobEffect effect) {
+        public CrockPotFoodItemBuilder removeEffect(MobEffect effect) {
             this.removedEffects.add(effect);
             return this;
         }
 
-        public CrockPotFoodBuilder tooltip(String key) {
-            this.tooltips.add(() -> new TranslatableComponent("tooltip.crockpot." + key));
+        public CrockPotFoodItemBuilder tooltip(String key) {
+            this.tooltips.add(() -> I18nUtils.createComponent("tooltip", key));
             return this;
         }
 
-        public CrockPotFoodBuilder tooltip(String key, ChatFormatting... formats) {
-            this.tooltips.add(() -> new TranslatableComponent("tooltip.crockpot." + key).withStyle(formats));
+        public CrockPotFoodItemBuilder tooltip(String key, ChatFormatting... formats) {
+            this.tooltips.add(() -> I18nUtils.createComponent("tooltip", key).withStyle(formats));
             return this;
         }
 
-        public CrockPotFoodBuilder hideEffects() {
+        public CrockPotFoodItemBuilder hideEffects() {
             this.hideEffects = true;
             return this;
         }
 
-        public CrockPotFoodBuilder effectTooltip(Component tooltip) {
+        public CrockPotFoodItemBuilder effectTooltip(Component tooltip) {
             this.effectTooltips.add(() -> tooltip);
             return this;
         }
 
-        public CrockPotFoodBuilder effectTooltip(String key, ChatFormatting... formats) {
-            return this.effectTooltip(new TranslatableComponent("tooltip.crockpot.effect." + key).withStyle(formats));
+        public CrockPotFoodItemBuilder effectTooltip(String key, ChatFormatting... formats) {
+            return this.effectTooltip(I18nUtils.createComponent("tooltip", "effect." + key).withStyle(formats));
         }
 
-        public CrockPotFoodBuilder effectTooltip(String key) {
-            return this.effectTooltip(new TranslatableComponent("tooltip.crockpot.effect." + key));
+        public CrockPotFoodItemBuilder effectTooltip(String key) {
+            return this.effectTooltip(I18nUtils.createComponent("tooltip", "effect." + key));
         }
 
-        public CrockPotFoodBuilder hide() {
-            this.properties = new Item.Properties();
+        public CrockPotFoodItemBuilder hide() {
+            this.properties = new Properties();
             if (this.maxStackSize != 64) {
                 this.properties = this.properties.stacksTo(this.maxStackSize);
             }
@@ -323,20 +323,20 @@ public class CrockPotFood extends Item {
             return this;
         }
 
-        public CrockPotFoodBuilder stacksTo(int maxStackSize) {
+        public CrockPotFoodItemBuilder stacksTo(int maxStackSize) {
             this.maxStackSize = maxStackSize;
             this.properties = this.properties.stacksTo(this.maxStackSize);
             return this;
         }
 
-        public CrockPotFoodBuilder rarity(Rarity rarity) {
+        public CrockPotFoodItemBuilder rarity(Rarity rarity) {
             this.rarity = rarity;
             this.properties = this.properties.rarity(this.rarity);
             return this;
         }
 
-        public CrockPotFood build() {
-            return new CrockPotFood(this);
+        public CrockPotFoodItem build() {
+            return new CrockPotFoodItem(this);
         }
     }
 }
